--- a/stm32-bindings-gen/Cargo.toml
+++ b/stm32-bindings-gen/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.157", features = [ "derive" ] }
 serde_json = "1.0.94"
 proc-macro2 = "1.0.52"
 bindgen = "0.72.1"
+tempfile = "3.23.0"
