--- a/stm32-bindings-gen/res/Cargo.toml
+++ b/stm32-bindings-gen/res/Cargo.toml
@@ -51,7 +51,7 @@ cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
 defmt = { version = "0.3.0", optional = true }
 
 [features]
-default = ["pac"]
+default = ["pac", "wba_wpan_mac", "wba_wpan_ble"]
 
 wba_wpan_mac = []
 wba_wpan_ble = []
