Split generated bindings into 3 sections:
- ble: BLE bindings
- linklayer: lower-level
- mac: MAC bindings

Also added ll_sys_if, linklayer_plat bindings

Added mac_sys_if.rs and fixed workflow file
to conform to new crate generation

CI: generate bindings before packaging

also exclude wba-linklayer from workspace

Add explicit version for linklayer bindings

in generated crates

Squashed generated bindings to single package

Minimized changes between main

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,16 +33,24 @@ jobs:
         run: ./d download-all
       - name: Run build
         run: cargo run --release --bin stm32-bindings-gen
+      - name: Check wba-linklayer
+        run: cargo check --manifest-path wba-linklayer/Cargo.toml
       - name: Run package build
         run: |
-          cd build/stm32-bindings
           export CARGO_BUILD_TARGET=thumbv8m.main-none-eabihf
-          cargo fix --lib -p stm32-bindings --allow-no-vcs
-          cargo build
-          cargo package
-          ls target/package
+          for crate_dir in linklayer-bindings; do
+            echo "::group::Packaging ${crate_dir}"
+            (
+              cd build/${crate_dir}
+              cargo fix --lib --allow-no-vcs --target ${CARGO_BUILD_TARGET}
+              cargo build --target ${CARGO_BUILD_TARGET}
+              cargo package
+              ls target/package
+            )
+            echo "::endgroup::"
+          done
       - name: Upload package build
         uses: actions/upload-artifact@v4
         with:
           name: crate
-          path: build/stm32-bindings/target/package/*.crate
+          path: build/*-bindings/target/package/*.crate
